--- a/insurance/templates/calc/step2.html
+++ b/insurance/templates/calc/step2.html
@@ -121,7 +121,12 @@
                     <span class="select-text"></span>
                     {{ s1_form.burglar_alarm_group }}
                 </div>
-                {{ s1_form.burglar_alarm_model }}
+
+                <div class="long-select">
+                    <span class="select-text"></span>
+                    {{ s1_form.burglar_alarm_model }}
+                </div>
+
 
                 <p><input type="submit" value="Обновить"/></p>
                 </form>
