--- a/insurance/templates/calc/step2.html
+++ b/insurance/templates/calc/step2.html
@@ -126,6 +126,9 @@
 
 
                         <div id="franchize-container">
+                            <span id="min"></span>
+                            <span id="max"></span>
+
                             <div id="franchize">
                                  {{ s1_form.franchise }}
                             </div>
