--- a/insurance/static/css/style.css
+++ b/insurance/static/css/style.css
@@ -2364,7 +2364,7 @@ div.messages li {
     background: url(/static/images/franchize_slider_back.png) top left no-repeat;
     width: 175px;
     position: relative;
-    margin: 30px 0;
+    margin: 50px 0 20px 0;
 }
 
 #franchize-container #min{
